--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-*/bin/*
-!*/bin/.gitkeep
+factory_method/build/*
+!factory_method/build/.gitkeep
